renew the register page

--- a/upstarts.conf
+++ b/upstarts.conf
@@ -1,13 +1,18 @@
-description "uWSGI instance to serve words_app"
+sudo nano /etc/systemd/system/words.service
 
-start on runlevel [2345]
-stop on runlevel [!2345]
+[Unit]
+Description=uWSGI instance to serve words_app
+After=network.target
 
-setuid words
-setgid www-data
+[Service]
+User=words
+Group=www-data
+WorkingDirectory=/home/words/words_project/words
+Environment="PATH=/usr/bin"
+ExecStart=/usr/bin/uwsgi --ini words_uwsgi.ini
 
-script
-    cd /home/words/
-    . words_env/bin/activate
-    uwsgi --ini words_app.ini
-end script
+[Install]
+WantedBy=multi-user.target
+
+sudo systemctl start words
+sudo systemctl enable words
