--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,11 @@ certifi==2016.9.26
 cffi==1.9.1
 click==6.6
 colorama==0.3.7
+comtypes==1.1.3
 configparser==3.5.0
 cryptography==1.8.1
 cython==0.25.2
 decorator==4.0.10
-Django==1.10.3
 docutils==0.13.1
 docxtpl==0.2.4
 entrypoints==0.2.2
@@ -30,7 +30,6 @@ Flask-SQLAlchemy==2.2
 Flask-User==0.6.11
 Flask-WTF==0.14.2
 functools32==3.2.3.post2
-google-api-python-client==1.6.2
 html5lib==0.9999999
 httplib2==0.10.3
 idna==2.5
@@ -43,21 +42,21 @@ isodate==0.5.4
 itsdangerous==0.24
 Jinja2==2.8
 jsonschema==2.5.1
-jupyter==1.0.0
-jupyter-client==4.4.0
-jupyter-console==5.0.0
-jupyter-core==4.2.1
 keyring==10.0.2
 lxml==3.7.1
 Mako==1.0.6
 MarkupSafe==0.23
+matplotlib==1.3.0
 mistune==0.7.3
+nbconvert==5.0.0
+nbformat==4.2.0
 ndg-httpsclient==0.4.2
 nltk==3.2.2
-notebook==4.3.1
+numpy==1.11.3
 oauth2client==4.0.0
 packaging==16.8
-
+pandas==0.19.2
+pandocfilters==1.4.1
 paramiko==2.1.2
 passlib==1.7.1
 pathlib2==2.1.0
@@ -67,21 +66,25 @@ pockets==0.3.1
 prompt-toolkit==1.0.9
 pyasn1==0.2.2
 pyasn1-modules==0.0.8
+PyBluez==0.22
 pycparser==2.17
 pycryptodome==3.4.5
-pygame==1.9.2
 Pygments==2.1.3
 Pympler==0.5
 PyMySQL==0.7.10
 pyOpenSSL==17.0.0
 pyparsing==2.2.0
 python-dateutil==2.6.0
+python-docx==0.8.6
 python-editor==1.0.3
 pytz==2016.10
+pyzmq==16.0.2
 qtconsole==4.2.1
 requests==2.13.0
 rsa==3.4.2
-
+scipy==0.16.1
+SimpleCV==1.3
+simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.10.0
 Sphinx==1.2.3
@@ -95,4 +98,4 @@ wcwidth==0.1.7
 Werkzeug==0.11.15
 widgetsnbextension==1.2.6
 WTForms==2.1
-yagmail==0.5.148
+
