--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -9,6 +9,7 @@ chmod-socket = 664
 vacuum = true
 
 die-on-term = true
-logto = /tmp/errlog
+
+logto = /tmp/flask_errlog
 
 nano ~/words_project/words/words_uwsgi.ini
